Sprint 3 Code attribution

--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -6,7 +6,7 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
-.row{
+.row {
   padding-top: 100px;
   padding-left: 5%;
   padding-right: 5%;
@@ -15,10 +15,10 @@
 mat-card {
   text-align: center;
   display: block;
-  line-height:22.5px;
-  width:92%;
+  line-height: 22.5px;
+  width: 92%;
   float: left;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   background-color: #c8e6c9;
   color: #1b5e20;
 }
