--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -7,7 +7,7 @@
 ;===========================================
 */
 
-.row{
+.row {
   padding-top: 100px;
   padding-left: 10%;
   padding-right: 10%;
@@ -16,15 +16,16 @@
 mat-card {
   text-align: center;
   display: block;
-  line-height:22.5px;
-  width:89%;
+  line-height: 22.5px;
+  width: 89%;
   float: left;
   background-color: #c8e6c9;
   color: #1b5e20;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
-ul, li{
-    list-style-type: none;
-    text-align: center;
+ul,
+li {
+  list-style-type: none;
+  text-align: center;
 }
