--- a/src/app/pages/error-interceptor/error-interceptor.component.css
+++ b/src/app/pages/error-interceptor/error-interceptor.component.css
@@ -8,13 +8,14 @@
 */
 
 button {
-    margin: auto;
-    font-family: 'Bungee', cursive;
-    color: #1b5e20;
+  margin: auto;
+  font-family: "Bungee", cursive;
+  color: #1b5e20;
 }
 
-h1, p {
-    text-align: center;
-    font-family: 'Bungee', cursive;
-    color: #1b5e20;
+h1,
+p {
+  text-align: center;
+  font-family: "Bungee", cursive;
+  color: #1b5e20;
 }
