--- a/src/app/pages/error-interceptor/error-interceptor.component.html
+++ b/src/app/pages/error-interceptor/error-interceptor.component.html
@@ -8,7 +8,11 @@
 */ -->
 
 <h1 mat-dialog-title>An Error has occured.</h1>
-<div mat-dialog-content><p class='mat-body-1'>{{ data.message }}</p></div>
+<div mat-dialog-content>
+  <p class="mat-body-1">{{ data.message }}</p>
+</div>
 <div mat-dialog-actions>
-    <button mat-raised-button mat-dialog-close color='primary'><mat-icon>keyboard_return</mat-icon></button>
+  <button mat-raised-button mat-dialog-close color="primary">
+    <mat-icon>keyboard_return</mat-icon>
+  </button>
 </div>
