--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -24,7 +24,7 @@ h6 {
 }
 
 mat-form-field {
-  width: 90%
+  width: 90%;
 }
 
 mat-card-content {
@@ -35,4 +35,3 @@ button {
   display: inline-block;
   min-width: 25%;
 }
-
