--- a/src/app/pages/internal-server-error/internal-server-error.component.html
+++ b/src/app/pages/internal-server-error/internal-server-error.component.html
@@ -7,13 +7,15 @@
 ;===========================================
 -->
 <div fxLayoutAlign="center">
-    <mat-card class="nfBox">
-        <mat-card-header>
-            <mat-card-title>500</mat-card-title>
-            <mat-card-subtitle>Something went wrong</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-actions>
-            <button mat-raised-button color='accent' (click)="navHome()">Reload</button>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card class="nfBox">
+    <mat-card-header>
+      <mat-card-title>500</mat-card-title>
+      <mat-card-subtitle>Something went wrong</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+      <button mat-raised-button color="accent" (click)="navHome()">
+        Reload
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </div>
