--- a/src/app/pages/role-configuration/role-configuration.component.html
+++ b/src/app/pages/role-configuration/role-configuration.component.html
@@ -15,12 +15,27 @@
         <h2>Role Management</h2>
       </div>
       <div *ngIf="newRole">
-        <input type="text" [(ngModel)]="addingRole" placeholder="Enter new role" />
-        <button mat-raised-button color="accent" class="buttonStyle" (click)="addRole(addingRole)">
+        <input
+          type="text"
+          [(ngModel)]="addingRole"
+          placeholder="Enter new role"
+        />
+        <button
+          mat-raised-button
+          color="accent"
+          class="buttonStyle"
+          (click)="addRole(addingRole)"
+        >
           Submit Role
         </button>
       </div>
-      <button mat-raised-button color="accent" class="buttonStyle" *ngIf="!newRole" (click)="addNewRole()">
+      <button
+        mat-raised-button
+        color="accent"
+        class="buttonStyle"
+        *ngIf="!newRole"
+        (click)="addNewRole()"
+      >
         New Role
       </button>
       <table class="tableRole table table-hover">
@@ -34,7 +49,12 @@
           <tr>
             <td *ngIf="role._id === editRoleId">
               <input type="text" [(ngModel)]="role.role" />
-              <button mat-raised-button color="accent" class="buttonStyle" (click)="update(role)">
+              <button
+                mat-raised-button
+                color="accent"
+                class="buttonStyle"
+                (click)="update(role)"
+              >
                 Update
               </button>
             </td>
@@ -43,10 +63,20 @@
             </td>
 
             <td scope="row">
-              <button mat-button color="accent" class="buttonStyle" (click)="edit(role._id)">
+              <button
+                mat-button
+                color="accent"
+                class="buttonStyle"
+                (click)="edit(role._id)"
+              >
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-button color="warn" class="buttonStyle" (click)="deleteRole(role)">
+              <button
+                mat-button
+                color="warn"
+                class="buttonStyle"
+                (click)="deleteRole(role)"
+              >
                 <mat-icon>delete</mat-icon>
               </button>
             </td>
