--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -7,16 +7,16 @@
 ;===========================================
 */
 .navBar {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
 h3 {
   color: #c8e6c9;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   text-emphasis: bold;
 }
 span {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
 mat-icon {
