--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -7,99 +7,176 @@
 ;===========================================
 */ -->
 
-<div *ngIf='hasSubmitted === false' fxLayoutAlign='center'>
-    <mat-card>
-        <h2>Please Enter Your Username:</h2>
-        <mat-card-content *ngIf='userError === true'>
-            <h6>{{ noUser }}</h6>
-        </mat-card-content>
-        <form [formGroup]='forgotPassword' #forgottenPassword='ngForm' (ngSubmit)='onSubmit(forgotPassword.value)'>
-            <mat-card-content>
-                    <mat-form-field>
-                        <input type='text' matInput placeholder='username' formControlName='username'>
-
-                    </mat-form-field>
-                    <div class="error" *ngIf="
-                    forgotPassword.get('username').invalid &&
-                    (forgotPassword.get('username').touched ||
-                    forgotPassword.get('username').dirty)
-                ">
-                        <div *ngIf="forgotPassword.get('username').hasError('required')">
-                            Username is required.
-                        </div>
-                    </div>
-                <mat-card-actions>
-                    <button mat-raised-button color='accent' [disabled]='!forgottenPassword.valid' type='submit'>Submit</button>
-                </mat-card-actions>
-            </mat-card-content>
-        </form>
-    </mat-card>
+<div *ngIf="hasSubmitted === false" fxLayoutAlign="center">
+  <mat-card>
+    <h2>Please Enter Your Username:</h2>
+    <mat-card-content *ngIf="userError === true">
+      <h6>{{ noUser }}</h6>
+    </mat-card-content>
+    <form
+      [formGroup]="forgotPassword"
+      #forgottenPassword="ngForm"
+      (ngSubmit)="onSubmit(forgotPassword.value)"
+    >
+      <mat-card-content>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="username"
+            formControlName="username"
+          />
+        </mat-form-field>
+        <div
+          class="error"
+          *ngIf="
+            forgotPassword.get('username').invalid &&
+            (forgotPassword.get('username').touched ||
+              forgotPassword.get('username').dirty)
+          "
+        >
+          <div *ngIf="forgotPassword.get('username').hasError('required')">
+            Username is required.
+          </div>
+        </div>
+        <mat-card-actions>
+          <button
+            mat-raised-button
+            color="accent"
+            [disabled]="!forgottenPassword.valid"
+            type="submit"
+          >
+            Submit
+          </button>
+        </mat-card-actions>
+      </mat-card-content>
+    </form>
+  </mat-card>
 </div>
 
-<div *ngIf='hasSubmitted === true && hasAnswered === false' fxLayoutAlign='center'>
-    <mat-card>
-        <h2>Please answer your security questions:</h2>
-        <mat-card-content *ngIf='errorMessage === true'>
-            <h6>{{ displayError }}</h6>
-        </mat-card-content>
-        <br/>
-        <mat-card-content>
-            <div *ngFor='let question of securityQuestions.result.security_questions'>
-                <mat-card-content>{{ question.question_text }}</mat-card-content>
-                <mat-form-field>
-                    <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer'>
-                </mat-form-field>
-                <mat-card-content>{{ question.question_text1 }}</mat-card-content>
-                <mat-form-field>
-                     <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer1'>
-                </mat-form-field>
-                <mat-card-content>{{ question.question_text2 }}</mat-card-content>
-                <mat-form-field>
-                    <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer2'>
-                </mat-form-field>
-            </div>
-        </mat-card-content>
-        <button mat-raised-button color='accent' (click)='checkAnswers()'>Submit Answers</button>
-    </mat-card>
+<div
+  *ngIf="hasSubmitted === true && hasAnswered === false"
+  fxLayoutAlign="center"
+>
+  <mat-card>
+    <h2>Please answer your security questions:</h2>
+    <mat-card-content *ngIf="errorMessage === true">
+      <h6>{{ displayError }}</h6>
+    </mat-card-content>
+    <br />
+    <mat-card-content>
+      <div *ngFor="let question of securityQuestions.result.security_questions">
+        <mat-card-content>{{ question.question_text }}</mat-card-content>
+        <mat-form-field>
+          <input
+            matInput
+            type="text"
+            placeholder="answer"
+            [(ngModel)]="user_answer"
+          />
+        </mat-form-field>
+        <mat-card-content>{{ question.question_text1 }}</mat-card-content>
+        <mat-form-field>
+          <input
+            matInput
+            type="text"
+            placeholder="answer"
+            [(ngModel)]="user_answer1"
+          />
+        </mat-form-field>
+        <mat-card-content>{{ question.question_text2 }}</mat-card-content>
+        <mat-form-field>
+          <input
+            matInput
+            type="text"
+            placeholder="answer"
+            [(ngModel)]="user_answer2"
+          />
+        </mat-form-field>
+      </div>
+    </mat-card-content>
+    <button mat-raised-button color="accent" (click)="checkAnswers()">
+      Submit Answers
+    </button>
+  </mat-card>
 </div>
 
-<div *ngIf='hasAnswered === true' fxLayoutAlign='center'>
-    <mat-card>
-        <h2>Please Reset Your Password</h2>
-        <p>Passwords must be 8 characters long, contain 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</p>
-        <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onReset(resetPassword.value)'>
-            <mat-card-content>
-                    <mat-form-field>
-                            <input matInput type='password' placeholder='enter your new password' formControlName='password' [(ngModel)]='updatePassword' id='password'>
-                    </mat-form-field>
+<div *ngIf="hasAnswered === true" fxLayoutAlign="center">
+  <mat-card>
+    <h2>Please Reset Your Password</h2>
+    <p>
+      Passwords must be 8 characters long, contain 1 uppercase letter, 1
+      lowercase letter, 1 number, and 1 symbol.
+    </p>
+    <form
+      [formGroup]="resetPassword"
+      #newPassword="ngForm"
+      (ngSubmit)="onReset(resetPassword.value)"
+    >
+      <mat-card-content>
+        <mat-form-field>
+          <input
+            matInput
+            type="password"
+            placeholder="enter your new password"
+            formControlName="password"
+            [(ngModel)]="updatePassword"
+            id="password"
+          />
+        </mat-form-field>
 
-                    <div class="error" *ngIf="
-                    resetPassword.get('password').invalid &&
-                    (resetPassword.get('password').touched ||
-                    resetPassword.get('password').dirty)
-                     ">
-                        <div *ngIf="resetPassword.get('password').hasError('required') && resetPassword.get('password').hasError('minlength')">
-                            *Password is required and must be a minimum of 9 characters.
-                        </div>
-                    </div>
-                    <mat-form-field>
-                            <input matInput type='password' placeholder='confirm password' formControlName='confirmPassword' [(ngModel)]='confirmNewPassword' id='confirmPassword'>
-                    </mat-form-field>
+        <div
+          class="error"
+          *ngIf="
+            resetPassword.get('password').invalid &&
+            (resetPassword.get('password').touched ||
+              resetPassword.get('password').dirty)
+          "
+        >
+          <div
+            *ngIf="
+              resetPassword.get('password').hasError('required') &&
+              resetPassword.get('password').hasError('minlength')
+            "
+          >
+            *Password is required and must be a minimum of 9 characters.
+          </div>
+        </div>
+        <mat-form-field>
+          <input
+            matInput
+            type="password"
+            placeholder="confirm password"
+            formControlName="confirmPassword"
+            [(ngModel)]="confirmNewPassword"
+            id="confirmPassword"
+          />
+        </mat-form-field>
 
-                    <div class="error" *ngIf="
-                    resetPassword.get('confirmPassword').invalid &&
-                    (resetPassword.get('confirmPassword').touched ||
-                    resetPassword.get('confirmPassword').dirty)
-                    ">
-                        <div *ngIf="resetPassword.get('confirmPassword').hasError('required') && resetPassword.get('password').hasError('minlength')">
-                            *Please confirm your password.
-                        </div>
-                    </div>
-                    <div class='error' *ngIf='noPasswordMatch !== false'>
-                        *Passwords must match
-                    </div>
-            </mat-card-content>
-            <button mat-raised-button color='accent' [disabled]="!newPassword.valid">Reset Password</button>
-        </form>
-    </mat-card>
+        <div
+          class="error"
+          *ngIf="
+            resetPassword.get('confirmPassword').invalid &&
+            (resetPassword.get('confirmPassword').touched ||
+              resetPassword.get('confirmPassword').dirty)
+          "
+        >
+          <div
+            *ngIf="
+              resetPassword.get('confirmPassword').hasError('required') &&
+              resetPassword.get('password').hasError('minlength')
+            "
+          >
+            *Please confirm your password.
+          </div>
+        </div>
+        <div class="error" *ngIf="noPasswordMatch !== false">
+          *Passwords must match
+        </div>
+      </mat-card-content>
+      <button mat-raised-button color="accent" [disabled]="!newPassword.valid">
+        Reset Password
+      </button>
+    </form>
+  </mat-card>
 </div>
