--- a/src/app/pages/internal-server-error/internal-server-error.component.css
+++ b/src/app/pages/internal-server-error/internal-server-error.component.css
@@ -8,17 +8,17 @@
 */
 
 .nfBox {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    width: 25%;
-    border: 0.5em black;
-    text-align: center;
-    margin-top: 100px;
-    background-color: #c8e6c9;
-    color: #1b5e20;
-    font-family: 'Bungee', cursive;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 25%;
+  border: 0.5em black;
+  text-align: center;
+  margin-top: 100px;
+  background-color: #c8e6c9;
+  color: #1b5e20;
+  font-family: "Bungee", cursive;
 }
 body {
-    text-align: center;
+  text-align: center;
 }
