--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -21,7 +21,7 @@ h1 {
   margin-top: 100px;
   background-color: #c8e6c9;
   color: #1b5e20;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
 mat-form-field {
@@ -31,10 +31,10 @@ mat-form-field {
 
 button {
   width: 75%;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
 .error {
   color: red;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
