--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,17 @@ html {
   height: 100%;
   width: 100%;
 }
-body, p {
+body,
+p {
   margin: 0;
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
 
-h1, h2, h3, h4, h5, h6{
-  font-family: 'Bungee', cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bungee", cursive;
 }
