--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -13,14 +13,17 @@ mat-card {
   text-align: center;
   background-color: #c8e6c9;
   color: #1b5e20;
+  font-family: "Bungee", cursive;
 }
 
 h6 {
   color: #f9a825;
+  font-family: "Bungee", cursive;
 }
 
 .error {
   color: #f9a825;
+  font-family: "Bungee", cursive;
 }
 
 mat-form-field {
@@ -34,4 +37,5 @@ mat-card-content {
 button {
   display: inline-block;
   min-width: 25%;
+  font-family: "Bungee", cursive;
 }
