About us typo fix

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -36,17 +36,17 @@
       engineer of her own. She had created a time machine originally to stop the
       rich from taking all technology for themselves. Back in 1997 just as
       computers were starting to be relevant, Lilith and her team took to the
-      time line to make technology open to for all.
+      time line to make technology available to all.
     </h6>
     <br />
     <h6>
-      As the years came and went, the Ghoul's family's big turning point was the
+      As the years came and went, the Ghoul family's big turning point was the
       nuclear devastation that occurred in 2019. This event was life changing
       for all of America as everyone was pushed underground to live in hiding.
       Robert and his family began a new strategy to live and joined the world in
       becoming technical experts in every field possible. Lilith became an
       expert in robotics and soon was one of the best known mechanics
-      underground. As word passed through the millions of vaults, the Ghoul’s
+      underground. As word passed through the millions of vaults, the Ghoul
       family was able to reopen shop. Being so versed in old and new technology,
       the family was able to open Bob’s Computer Repair Shop and strive for new
       goals.
