--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,37 +14,31 @@
   <h1>Welcome!</h1>
   <section class="home-section">
     <ul class="home">
-      <li class="home-list">
+      <li class="home-list" routerLink="/service-repair">
         <h2>Our Services</h2>
         <figure class="home-photo">
           <img src="/assets/images/computer-repair.png" alt="" />
         </figure>
         <span class="overlay">
-          <p>
-            <a routerLink="/service-repair">Go to Services Page!</a>
-          </p>
+            <p>Go to Services Page!</p>
         </span>
       </li>
-      <li class="home-list-1">
+      <li class="home-list-1" routerLink="/session/about-us">
         <h2>About Us</h2>
         <figure class="home-photo">
           <img src="/assets/images/about-us.png" alt="" />
         </figure>
         <span class="overlay">
-          <p>
-            <a routerLink="/session/about-us">Go to About Us page!</a>
-          </p>
+            <p>Go to About Us page!</p>
         </span>
       </li>
-      <li class="home-list-2">
+      <li class="home-list-2" routerLink="/session/contact-us">
         <h2>Contact Us</h2>
         <figure class="home-photo">
           <img src="/assets/images/contact-us.png" alt="" />
         </figure>
         <span class="overlay">
-          <p>
-            <a routerLink="/session/contact-us">Go to Contact Us page!</a>
-          </p>
+            <p>Go to Contact Us page!</p>
         </span>
       </li>
     </ul>
