updating service-repair page to calculate cents

--- a/src/app/pages/service-repair/service-repair.component.html
+++ b/src/app/pages/service-repair/service-repair.component.html
@@ -72,7 +72,7 @@
     </mat-card>
   </mat-card>
   <mat-card>
-    Your Total is: ${{ invoice.cartTotal }}.00
+    Your Total is: ${{ invoice.cartTotal }}
     <button mat-raised-button color="accent" (click)="orderModal()">
       Submit
     </button>
