remove automargin css

--- a/src/app/pages/user-registration/user-registration.component.css
+++ b/src/app/pages/user-registration/user-registration.component.css
@@ -18,13 +18,10 @@ small {
   background-color: #c8e6c9;
   color: #1b5e20;
 }
+/*
 .formInput {
   width: 100%;
-}
-
-.autoMargin {
-  margin: 0 auto;
-}
+} */
 
 .addressInput {
   width: 100%;
