--- a/src/app/pages/user-registration/user-registration.component.css
+++ b/src/app/pages/user-registration/user-registration.component.css
@@ -18,10 +18,10 @@ small {
   background-color: #c8e6c9;
   color: #1b5e20;
 }
-/*
+
 .formInput {
   width: 100%;
-} */
+}
 
 .addressInput {
   width: 100%;
