user profile bug fix

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -38,3 +38,8 @@ button {
   color: red;
   font-family: "Bungee", cursive;
 }
+
+a.hover:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
