--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -74,9 +74,9 @@
           </button>
         </mat-card-actions>
       </form>
-      <a (click)="navRecovery()">Forgot your password?</a>
+      <a class="hover" (click)="navRecovery()">Forgot your password?</a>
       <br />
-      <a (click)="navRegister()">Create a new account!</a>
+      <a class="hover" (click)="navRegister()">Create a new account!</a>
     </mat-card-content>
   </mat-card>
   <div></div>
